# MusicBot

./: .gitignore  GIT_SETUP.md  IMPROVEMENTS_SKIPPED.md  START_BOT.bat  deploy-commands.js  guide.txt.temp  index.js  package-lock.json  package.json
.github/workflows/: monthly-wrap.yml
audio_engine/: Cargo.toml
audio_engine/src/: main.rs
config/: constants.js  index.js  paths.js
data/: playlists.json  stats.json
data/monthly-stats/2026-02/: stats-2026-02-28.json
data/monthly-stats/2026-03/: stats-2026-03-31.json
scripts/: generate-wrap.js  push-stats.js  update-stats.ps1
src/audio/: AudioMixerController.js  CommandQueue.js  PlaybackEngine.js  SkipManager.js  audio-bridge.js  index.js  mixer-utils.js  playback.js
src/bootstrap/: connection.js
src/commands/: index.js  play.js
src/database/: playlists.js  stats.js
src/handlers/: AudioOperationBarrier.js  interaction.js  modalHandlers.js  playlistHandlers.js  voiceState.js
src/queue/: QueueManager.js  persistence.js
src/state/: ServerQueue.js  StateVersion.js  globals.js
src/ui/: components.js  dashboard.js  embeds.js  index.js
src/utils/: cleanup.js  discord.js  httpProxy.js  lyrics.js  sanitize.js  youtube.js
wrap/: stats.json
